# wasmedge-anna

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  main.cpp
anna/: CMakeLists.txt  client_wrapper.cpp
anna/include/anna/: client_wrapper.hpp
cmake/Modules/: FindWasmEdge.cmake
